<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.SearchActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:text="@string/be_calm_we_will_help_you"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/choose_city"
            android:textColor="@color/black"
            android:textSize="36sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_city"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:hint="@string/eg_london"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/blood_group"
            android:textColor="@color/black"
            android:textSize="36sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_blood_group"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:hint="eg: A+"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="30dp"
            android:background="@color/pink"
            android:text="@string/find_donors"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>