<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.MakeRequestActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/write_your_a_heartfelt_message_and_add_an_image_somebody_will_definitely_help_you_if_possible"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/border_background">
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/message"
            android:textSize="18sp"
            android:minLines="6"
            android:maxLines="10"
            android:hint="@string/message"
            android:padding="10dp"
            android:cursorVisible="false"
            android:background="@null"
            android:textColorHint="@android:color/black"
            android:gravity="top"
            android:textAlignment="gravity"
            android:textColor="@android:color/black"/>

        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/number"
                android:textSize="18sp"

                android:hint="@string/number"
                android:padding="10dp"
                android:cursorVisible="false"
                android:background="@null"
                android:textColorHint="@android:color/black"
                android:gravity="top"
                android:textAlignment="gravity"
                android:textColor="@android:color/black"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="30dp"
            android:background="@color/pink"
            android:text="@string/post_request"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>